fix description align

--- a/src/components/games/super-game/super-game.module.css
+++ b/src/components/games/super-game/super-game.module.css
@@ -25,11 +25,16 @@
 .descriptionItem {
 	display: flex;
 	gap: 4px;
-	justify-content: center;
+	justify-content: end;
 	align-items: center;
 	font-size: 14px;
 	line-height: 14px;
 	color: #797979;
+	width: 60px;
+}
+
+.descriptionItemRight {
+	justify-content: start;
 }
 
 .descriptionIcon {
